--- a/.github/workflows/Barcode.Human.Curio.yml
+++ b/.github/workflows/Barcode.Human.Curio.yml
@@ -2,8 +2,8 @@ name: Barcode Human Curio ONT
 
 on:
   workflow_dispatch:
-  schedule:
-  - cron: '0 1 * * 0'
+#  schedule:
+#  - cron: '0 1 * * 0'
 
 env:
   LAUNCHER: ${{github.workspace}}/tests/github/run_barcode_test.py
