--- a/.github/workflows/Barcode.Mouse.10x.ONT_Stereo.yml
+++ b/.github/workflows/Barcode.Mouse.10x.ONT_Stereo.yml
@@ -2,8 +2,8 @@ name: Barcode Mouse 10x ONT Stereo
 
 on:
   workflow_dispatch:
-  schedule:
-  - cron: '30 2 * * 1'
+#  schedule:
+#  - cron: '30 2 * * 1'
 
 env:
   LAUNCHER: ${{github.workspace}}/tests/github/run_barcode_test.py
