--- a/.github/workflows/SIRVs.Set4.simulated_perfect.yml
+++ b/.github/workflows/SIRVs.Set4.simulated_perfect.yml
@@ -2,8 +2,8 @@ name: SIRVs simulated perfect
 
 on:
   workflow_dispatch:
-  schedule:
-  - cron: '0 12 * * 2'
+#  schedule:
+#  - cron: '0 12 * * 2'
 
 env:
   RUN_NAME: SIRVs.simulated
