--- a/.github/workflows/YAML_tests.yml
+++ b/.github/workflows/YAML_tests.yml
@@ -2,8 +2,8 @@ name: YAML tests
 
 on:
   workflow_dispatch:
-  schedule:
-  - cron: '0 6 * * 3,6'
+#  schedule:
+#  - cron: '0 6 * * 3,6'
 
 env:
   RUN_NAME: Resume_tests
