--- a/.github/workflows/Barcode.Mouse.StereoSeq.yml
+++ b/.github/workflows/Barcode.Mouse.StereoSeq.yml
@@ -2,8 +2,8 @@ name: Barcode Mouse StereoSeq
 
 on:
   workflow_dispatch:
-  schedule:
-  - cron: '0 2 * * 4'
+#  schedule:
+#  - cron: '0 2 * * 4'
 
 env:
   LAUNCHER: ${{github.workspace}}/tests/github/run_barcode_test.py
