--- a/.github/workflows/Group_tests.yml
+++ b/.github/workflows/Group_tests.yml
@@ -2,8 +2,8 @@ name: Read grouping tests
 
 on:
   workflow_dispatch:
-  schedule:
-  - cron: '0 2 * * 0,4'
+#  schedule:
+#  - cron: '0 2 * * 0,4'
 
 env:
   RUN_NAME: Resume_tests
