--- a/.github/workflows/Human.ONT_simulated.R9.uniform_cov.yml
+++ b/.github/workflows/Human.ONT_simulated.R9.uniform_cov.yml
@@ -2,8 +2,8 @@ name: Human ONT R9 simulated uniform coverage
 
 on:
   workflow_dispatch:
-  schedule:
-  - cron: '0 5 * * 0'
+#  schedule:
+#  - cron: '0 5 * * 0'
 
 env:
   RUN_NAME: Human.ONT_simulated.R9.uniform_cov
