--- a/.github/workflows/Human.PB_simulated.uniform_cov.yml
+++ b/.github/workflows/Human.PB_simulated.uniform_cov.yml
@@ -2,8 +2,8 @@ name: Human PacBio simulated uniform coverage
 
 on:
   workflow_dispatch:
-  schedule:
-  - cron: '0 5 * * 2'
+#  schedule:
+#  - cron: '0 5 * * 2'
 
 env:
   RUN_NAME: Human.PB_simulated.uniform_cov
