--- a/.github/workflows/Mouse.ONT_simulated.R10.no_gtf.yml
+++ b/.github/workflows/Mouse.ONT_simulated.R10.no_gtf.yml
@@ -2,8 +2,8 @@ name: Mouse ONT R10 simulated no annotation
 
 on:
   workflow_dispatch:
-  schedule:
-  - cron: '0 3 * * 0'
+#  schedule:
+#  - cron: '0 3 * * 0'
 
 env:
   RUN_NAME: Mouse.ONT_simulated.R10.no_gtf
