--- a/.github/workflows/Mouse.ONT_simulated.R10.reduced_db.yml
+++ b/.github/workflows/Mouse.ONT_simulated.R10.reduced_db.yml
@@ -2,8 +2,8 @@ name: Mouse ONT R10 simulated reduced annotation
 
 on:
   workflow_dispatch:
-  schedule:
-  - cron: '0 3 * * 3'
+#  schedule:
+#  - cron: '0 3 * * 3'
 
 env:
   RUN_NAME: Mouse.ONT_simulated.R10.reduced_db
