--- a/.github/workflows/Mouse.ONT_simulated.R10.uniform_cov.yml
+++ b/.github/workflows/Mouse.ONT_simulated.R10.uniform_cov.yml
@@ -2,8 +2,8 @@ name: Mouse ONT R10 simulated uniform coverage
 
 on:
   workflow_dispatch:
-  schedule:
-  - cron: '0 5 * * 4'
+#  schedule:
+#  - cron: '0 5 * * 4'
 
 env:
   RUN_NAME: Mouse.ONT_simulated.R10.uniform_cov
