--- a/.github/workflows/Mouse.ONT_simulated.R9.no_gtf.yml
+++ b/.github/workflows/Mouse.ONT_simulated.R9.no_gtf.yml
@@ -2,8 +2,8 @@ name: Mouse ONT R9 simulated no annotation
 
 on:
   workflow_dispatch:
-  schedule:
-  - cron: '0 3 * * 4'
+#  schedule:
+#  - cron: '0 3 * * 4'
 
 env:
   RUN_NAME: Mouse.ONT_simulated.R9.no_gtf
