--- a/.github/workflows/Mouse.ONT_simulated.R9.trunc.reduced_db.yml
+++ b/.github/workflows/Mouse.ONT_simulated.R9.trunc.reduced_db.yml
@@ -2,8 +2,8 @@ name: Mouse ONT R9 correct truncation simulated reduced annotation
 
 on:
   workflow_dispatch:
-  schedule:
-  - cron: '0 3 * * 6'
+#  schedule:
+#  - cron: '0 3 * * 6'
 
 env:
   RUN_NAME: Mouse.ONT_simulated.R9.trunc.reduced_db
