--- a/.github/workflows/Mouse.ONT_simulated.R9.uniform_cov.polyA.yml
+++ b/.github/workflows/Mouse.ONT_simulated.R9.uniform_cov.polyA.yml
@@ -2,8 +2,8 @@ name: Mouse ONT R9 simulated uniform coverage polyA
 
 on:
   workflow_dispatch:
-  schedule:
-  - cron: '0 6 * * 5'
+#  schedule:
+#  - cron: '0 6 * * 5'
 
 env:
   RUN_NAME: Mouse.ONT_simulated.R9.uniform_cov.polyA
