--- a/.github/workflows/Mouse.PB_simulated.reduced_db.yml
+++ b/.github/workflows/Mouse.PB_simulated.reduced_db.yml
@@ -2,8 +2,8 @@ name: Mouse PacBio simulated reduced annotation
 
 on:
   workflow_dispatch:
-  schedule:
-  - cron: '0 4 * * 5'
+#  schedule:
+#  - cron: '0 4 * * 5'
 
 env:
   RUN_NAME: Mouse.PB_simulated.reduced_db
