--- a/.github/workflows/Resume_tests.yml
+++ b/.github/workflows/Resume_tests.yml
@@ -2,8 +2,8 @@ name: Resume option tests
 
 on:
   workflow_dispatch:
-  schedule:
-  - cron: '0 6 * * 2,5'
+#  schedule:
+#  - cron: '0 6 * * 2,5'
 
 env:
   RUN_NAME: Resume_tests
