--- a/.github/workflows/SIRVs.Set4.R10.ubam.yml
+++ b/.github/workflows/SIRVs.Set4.R10.ubam.yml
@@ -2,8 +2,8 @@ name: SIRVs real ONT unmapped BAM reduced annotation
 
 on:
   workflow_dispatch:
-  schedule:
-  - cron: '0 20 * * 1,3,5'
+#  schedule:
+#  - cron: '0 20 * * 1,3,5'
 
 env:
   RUN_NAME: SIRVs.Set4.R10.ubam
