--- a/.github/workflows/SIRVs.Set4.real.yml
+++ b/.github/workflows/SIRVs.Set4.real.yml
@@ -2,8 +2,8 @@ name: SIRVs real ONT reduced annotation
 
 on:
   workflow_dispatch:
-  schedule:
-  - cron: '0 12 * * 1,3,5'
+#  schedule:
+#  - cron: '0 12 * * 1,3,5'
 
 env:
   RUN_NAME: SIRVs.Set4.R10
