--- a/.github/workflows/Unit_tests.yml
+++ b/.github/workflows/Unit_tests.yml
@@ -6,9 +6,9 @@ name: Unit tests
 on:
   workflow_dispatch:
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "main" ]
 
 permissions:
   contents: read
